--- a/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
+++ b/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
@@ -898,12 +898,38 @@ body .field-collection-container{
 					}
 				}
 			}
-			&.one{}
+			&.one{
+				width:100%;
+				@include breakpoint($tab,true){
+					width:70%;
+				}
+				.field__items{
+					.field__item{
+						width:90vw;
+						height:90vw;
+						margin:0;
+						a{
+							padding:75vw 20px 0 20px;
+						}
+						@include breakpoint($tab,true){
+							width:400px;
+							height:400px;
+							margin:0 15%;
+							a{
+								padding:350px 20px 0 20px;
+							}
+						}
+						.field__item{
+							margin:auto;
+						}
+					}
+				}
+			}
 			&.two{
 				.field__items{
 					.field__item{
 						width:100%;
-						height:100vw;
+						height:95vw;
 						a{
 							padding:80vw 20px 0 20px;
 						}
@@ -931,7 +957,39 @@ body .field-collection-container{
 					}
 				}
 			}
-			&.three{}
+			&.three{
+				.field__items{
+					.field__item{
+						width:100%;
+						height:95vw;
+						a{
+							padding:80vw 20px 0 20px;
+						}
+						@include breakpoint($tab,true){
+							width:160px;
+							height:160px;
+							margin:0 5px;
+							a{
+								padding:100px 20px 0 20px;
+							}
+						}
+						@include breakpoint($tab-large){
+							width:200px;
+							height:200px;
+							a{
+								padding:150px 20px 0 20px;
+							}
+						}
+						@include breakpoint($desk,true){
+							width:250px;
+							height:250px;
+							a{
+								padding:175px 20px 0 20px;
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 	.bean-subsections{
@@ -941,7 +999,7 @@ body .field-collection-container{
 			width: 100%;
 			border-top: 5px solid #444;
 			border-bottom:5px solid #444;
-			padding: 50px 0 20px 0;
+			padding: 20px 0;
 			margin: -20px 0 10px 0;
 			.field__item{
 				margin-top:20px;
@@ -1036,6 +1094,9 @@ body .field-collection-container{
 			float:left;
 			width:100%;
 			box-sizing:border-box;
+			img{
+				width:100%;
+			}
 		}
 		.promo-content-container{
 			display:block;
@@ -1084,7 +1145,7 @@ body .field-collection-container{
 				.field__item{
 					a{
 						@include f-text();
-						display: block;
+						@include floatblock();
 						text-decoration: none;
 						padding: 5px 10px;
 						color:$green;
@@ -1124,8 +1185,8 @@ html #block-views-basic-page-featured-block{
 		float: none;
 		background: white;
 		position: relative;
-		width:auto;
-		top:5px;
+		width:220px;
+		top:50px;
 		@include breakpoint($tab,true){
 			font-size:48px;
 			line-height:48px;
@@ -1164,6 +1225,7 @@ html #block-views-basic-page-featured-block{
 				display:block;
 				float:left;
 				width:100%;
+				margin-top:50px;
 				@include breakpoint($tab,true){
 					padding: 20px 10px;
 					margin-top: -20px;
@@ -1331,16 +1393,18 @@ html #block-views-basic-page-featured-block{
 		background: #eee;
 		text-align: center;
 		margin: auto;
-		top:5px;
+		top:25px;
 		float: none;
 		position: relative;
-		width:auto;
+		width:250px;
 		@include breakpoint($tab,true){
-			font-size:48px;
+			font-size:30px;
 			line-height:48px;
 			top:16px;
+			width:320px;
 		}
 		@include breakpoint($desk,true){
+			font-size:48px;
 			width: 530px;
 		}
 	}
@@ -1489,8 +1553,10 @@ html #block-views-basic-page-featured-block{
 		.view-content{
 			@include floatblock();
 			border-bottom: 5px solid #444;
+			padding:0 20px;
 			@include breakpoint($tab,true){
 				width:calc(100% - 300px);
+				padding:0;
 			}
 			.views-field-title{
 				@include floatblock();
@@ -1563,16 +1629,20 @@ html #block-views-basic-page-featured-block{
 		background:url("/sites/all/themes/unc_charlotte4/img/stadium_blur.jpg") no-repeat center bottom;
 		background-size:cover;
 	}
-	h2.block__title{
-		background:#eee;
-		@include breakpoint($tab,true){
-			background:white;
-		}
-	}
 	.block__content{
 		max-width:$maxwidth;
 		padding:0 10px;
 		margin:auto;
+		.content{
+			h2{
+				background:#eee;
+				@include breakpoint($tab,true){
+					background:white;
+				}
+			}
+			.showcase-intro{}
+			.showcase-elements{}
+		}
 	}
 }
 /* end homepage - specific elements */
@@ -1594,12 +1664,12 @@ html #block-views-basic-page-featured-block{
 				padding:0;
 				width:100%;
 				max-width:initial;
-				border:1px solid #ccc;
 				@include breakpoint($tab,true){
 					border:none;
 				}
 				img{
 					width:100%;
+					border:1px solid #ccc;
 				}
 			}
 			.promo-content-container{
@@ -1706,12 +1776,13 @@ html #block-views-basic-page-featured-block{
 			}
 			.promo-content-container{
 				width:100%;
-				@include breakpoint($tab,true){
+				padding:0;
+				@include breakpoint($tab-large,true){
 					max-width:initial;
 					position:absolute;
 				}
 				.field--name-field-intro-text{
-					@include breakpoint($tab,true){
+					@include breakpoint($tab-large,true){
 						max-width:$maxwidth;
 						padding:0 10px;
 						margin:auto;
@@ -1723,6 +1794,9 @@ html #block-views-basic-page-featured-block{
 						width:100%;
 						padding:20px;
 						@include breakpoint($tab,true){
+							margin-top:-30px;
+						}
+						@include breakpoint($tab-large,true){
 							background:$dkgreen-transparent;
 							margin-top:60px;
 							width:50%;
@@ -1755,6 +1829,7 @@ html #block-views-basic-page-featured-block{
 								padding:10px;
 								&:after{
 									@include arrowafter();
+									top: calc(50% - 8px);
 									right:initial;
 									color:white;
 								}
@@ -1780,6 +1855,7 @@ html #block-views-basic-page-featured-block{
 		margin:auto;
 		padding:10px;
 		width:auto;
+		width:250px;
 		@include breakpoint($tab,true){
 			width:600px;
 			font-size:48px;
@@ -1865,7 +1941,7 @@ html #block-views-basic-page-featured-block{
 	h2.block__title{
 		@include f-impact(36px);
 		text-align:center;
-		width: 300px;
+		width: 250px;
 		margin: auto;
 		background: #eee;
 		top: 30px;
@@ -1959,6 +2035,7 @@ html #block-views-basic-page-featured-block{
 		max-width:$maxwidth;
 		h2{
 			max-width:$maxwidth;
+			width:250px;
 			@include f-impact(36px);
 			text-align:center;
 			width:auto;
@@ -2035,6 +2112,7 @@ html #block-views-basic-page-featured-block{
 		max-width:$maxwidth;
 		@include f-impact(36px);
 		text-align:center;
+		width:250px;
 		@include breakpoint($tab,true){
 			width: 350px;
 		}
