--- a/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
@@ -744,6 +744,7 @@ body .field-collection-container {
         .block.block--bean .bean-showcase .showcase-elements .field__item img {
           display: block;
           float: left;
+          width: 100%;
           height: 100%;
           position: absolute;
           margin: auto;
@@ -1713,6 +1714,10 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
       margin: auto; }
   #block-views-media-block-3 .block__content .view-content .views-field-field-caption {
     display: none; }
+#block-views-media-block-3 .block__content .more-link {
+  max-width: 1200px;
+  margin: 0;
+  float: none; }
 
 /* images */
 #block-views-media-block-1 {
@@ -2383,6 +2388,24 @@ html body div.jp-audio {
     color: #444;
     padding: 0 10px;
     width: calc(100% - 90px); }
+
+.view-id-media.view-display-id-page_1 .views-row {
+  display: block;
+  float: left;
+  width: 100%;
+  padding: 5px; }
+.view-id-media.view-display-id-page_2 .views-row {
+  display: block;
+  float: left;
+  width: 100%;
+  padding: 5px;
+  width: 50%;
+  width: 33.3333%; }
+.view-id-media.view-display-id-page_3 .views-row {
+  display: block;
+  float: left;
+  width: 100%;
+  padding: 5px; }
 
 /* end styling for specific node pages */
 .l-footer {
